--- a/Tribute_page.html
+++ b/Tribute_page.html
@@ -1,18 +1,19 @@
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="Tribute_page.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="Tribute_page.css">
+  <title>Mother Teresa Tribute page</title>
 </head>
 <body>
+  
 <div class="container-fluid">
      <div class="row" id="heading_row">
-     <div class="col-xs-2 col-md-2" id="heading_pic_holder" ><img src="http://images.huffingtonpost.com/2016-10-27-1477610038-415619-motherteresa.jpg"  alt="Mother Teresa pic #1" id="heading_pic_1"></div>
-    <div class="col-xs-8 col-md-8" id="not_pic"><h1 style="color:#d9d9d9; <!--height:45%; overflow:hidden; text-overflow:ellipsis;-->" class="text-center">Mother Teresa - A Flower in the Dirt</h1>
+     <div class="col-xs-2 col-md-2 heading_pic_holder"><img src="http://images.huffingtonpost.com/2016-10-27-1477610038-415619-motherteresa.jpg"  alt="Mother Teresa pic #1" class="heading_pic_1 img-responsive"></div>
+    <div class="col-xs-8 col-md-8" id="not_pic"><h1 class="text-center">Mother Teresa - A Flower in the Dirt</h1>
       <p style="font-weight:bold;" class="text-center">Saint of the Gutters</p></div>
-	  <div class="col-xs-2 col-md-2" id="heading_pic_holder"><img src="http://images.huffingtonpost.com/2016-10-27-1477610038-415619-motherteresa.jpg"  alt="Mother Teresa pic #1" id="heading_pic_1"></div>
+	  <div class="col-xs-2 col-md-2 heading_pic_holder"><img src="http://images.huffingtonpost.com/2016-10-27-1477610038-415619-motherteresa.jpg"  alt="Mother Teresa pic #1" class="heading_pic_1 img-responsive"></div>
     </div>
 	
   
@@ -53,5 +54,6 @@
   
 </div>
 </div>
+
 </body>
 </html>
